<resources>
    <string name="app_name">DemoApplication</string>
    <string name="help">Help</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="password">Password*</string>
    <string name="sign_in">Sign In</string>
    <string name="mobile_no_email">Mobile No / Email*</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="basic">Basic</string>
    <string name="first_name">First Name</string>
    <string name="update">Update</string>
    <string name="last_name">Last Name</string>
    <string name="account_amp_change_password"><![CDATA[Account Details]]></string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="password_label">Password</string>
    <string name="complete_small">Complete</string>
    <string name="return_journey">Return Journey</string>
    <string name="warning">Warning..!</string>
    <string name="are_you_sure_want_to_logout">Are you sure want to logout?</string>
    <string name="submit">Submit</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="email_login_id">Email/Login ID</string>
    <string name="home">Home</string>
    <string name="location">Location</string>
    <string name="profile">Profile</string>
    <string name="documents">Documents</string>
    <string name="notification">Notification</string>
    <string name="ride_status">Ride Status - </string>
    <string name="ride_number">Ride Number - </string>
    <string name="search_location">Search Location</string>
    <string name="booking_id">Booking ID - </string>
    <string name="total_nos_visit">Todays no of visit</string>
    <string name="view_more">View More</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="booking_request">Booking Request</string>
    <string name="do_you_want_to_accept_this_request">Do you want to accept this request?</string>
    <string name="ride_details">Ride Details</string>
    <string name="reaching_customer">Reaching Customer</string>
    <string name="finish">FINISH</string>
    <string name="time_duration">Time Duration</string>
    <string name="you_have_completed_journey_successfully">You have completed journey successfully!</string>
    <string name="complete">COMPLETE</string>
    <string name="reaching_organisation">Reaching Organisation</string>
    <string name="finish_small">Finish</string>
    <string name="loading_slip_details">Loading Slip Details</string>
    <string name="loading_material">Loading Material</string>
    <string name="loading_slip_material_details">Loading Slip (Material Details):</string>
    <string name="material_description">Material Description</string>
    <string name="part_code">Part Code</string>
    <string name="quantity">Quantity</string>
    <string name="customer_part_title">Customer Part Code</string>
    <string name="price_rs">Price (Rs)</string>
    <string name="customer_details">Customer Details:</string>
    <string name="total">Total</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_code">Customer Code</string>
    <string name="customer_location">Customer Location</string>
    <string name="analytics">Analytics:</string>
    <string name="volumetric_efficiency">Vehicle Occupancy</string>
    <string name="logistic_cost">Logistic Cost</string>
    <string name="journey_details">Journey Details</string>
    <string name="booking_date_amp_time"><![CDATA[Booking Date & Time]]></string>
    <string name="mark_all_as_read">Mark All as Read</string>
    <string name="documents_details">Documents Details</string>
    <string name="driver_documents">Driver Documents</string>
    <string name="vehicle_documents">Vehicle Documents</string>
    <string name="logout">Logout</string>
    <string name="profile_details">Profile Details</string>
    <string name="email">Email</string>
    <string name="google_map_api_key">AIzaSyDhAtdpnBM6d5NnnI_icD5jV9KvDloB0GI</string>

</resources>