<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/bottom_menu_home"/>
    <item
        android:id="@+id/myride"
        android:title="@string/location"
        android:icon="@drawable/bottom_menu_location"/>
    <item
        android:id="@+id/notification"
        android:title="@string/notification"
        android:icon="@drawable/bottom_menu_notification"/>
    <item
        android:id="@+id/docs"
        android:title="@string/documents"
        android:icon="@drawable/bottom_menu_docs"/>
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/bottom_menu_profile"/>
</menu>