<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="355dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_login_top" />

            </FrameLayout>

            <com.example.demoapplication.mvp.view.TextViewCustomFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <com.example.demoapplication.mvp.view.CustomeEditText
                        android:id="@+id/edtEmailId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/rounded_gray_background"
                        android:drawableStart="@drawable/ic_email_mob"
                        android:drawablePadding="10dp"
                        android:hint="@string/mobile_no_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingLeft="18dp"
                        android:paddingTop="12dp"
                        android:paddingRight="18dp"
                        android:paddingBottom="12dp"
                        android:singleLine="true"
                        android:textColorHint="@color/grayTitle"
                        android:textSize="15dp" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="15dp"
                        android:orientation="horizontal"
                        app:boxBackgroundMode="none"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <com.example.demoapplication.mvp.view.CustomeEditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_gray_background"
                            android:drawableStart="@drawable/ic_password"
                            android:drawablePadding="10dp"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:paddingLeft="18dp"
                            android:paddingTop="5dp"
                            android:paddingRight="18dp"
                            android:paddingBottom="5dp"
                            android:singleLine="true"
                            android:textColorHint="@color/grayTitle"
                            android:textSize="15dp">

                        </com.example.demoapplication.mvp.view.CustomeEditText>


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.example.demoapplication.mvp.view.TextViewCustomFont
                        android:id="@+id/txtForgotPass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="15dp"
                        android:layout_weight="0."
                        android:gravity="center|right"
                        android:text="@string/forgot_password"
                        android:textColor="@color/blue"
                        android:textSize="15dp"
                        android:visibility="gone"/>

                    <com.example.demoapplication.mvp.view.ButtonCustomFont
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/btn_rounded_blue_gradient_background"
                        android:elevation="10dp"
                        android:gravity="center"
                        android:paddingLeft="65dp"
                        android:paddingTop="5dp"
                        android:paddingRight="65dp"
                        android:paddingBottom="5dp"
                        android:text="@string/sign_in"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16dp" />


                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

    </LinearLayout>
</ScrollView>